# flax-vision-models

./: .gitignore  README.md  convert.ipynb  pyproject.toml  requirements.txt  setup.py  test.py  tests.py
.github/workflows/: publish-package.yml  tests.yml
flax_models/: inference.ipynb
flax_models/vgg/: __init__.py  blocks.py  build_models.py  preprocess.py  vgg16.py  vgg19.py
flax_vision_models/: utils.py
flax_vision_models/vgg/: __init__.py  vgg16.py  vgg19.py
notebooks/: convert.ipynb  inference.ipynb
