[tool.poetry]
name = "flax-vision-models"
version = "0.1.0"
description = "Repository of vision models in Jax pre-trained on Imagenet"
authors = ["soumik12345 <19soumik.rakshit96@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8.10,<3.11"
jax = "^0.3.7"
jaxlib = "^0.3.7"
clu = "^0.0.6"
numpy = "1.22.2"
matplotlib = "^3.5.1"
wget = "^3.2"
deepdish = "^0.3.7"
wandb = "^0.12.14"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
tensorflow = "^2.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"